# cpp-python

./: enumerate.h  linspace.h  minmax.h  zipper.h
src/: CMakeLists.txt  configure.sh
src/cpp_python/: cpp_python.h
src/cpp_python/enumerate/: enumerate.h
src/cpp_python/linspace/: linspace.h
src/cpp_python/minmax/: minmax.h
src/cpp_python/zipper/: zipper.h
src/cpp_python_concepts/: cpp_python_concepts.h
src/cpp_python_type_traits/: cpp_python_type_traits.h
test/: CMakeLists.txt  test.sh
test/runtime_test/enumerate/: basic_enumerate.cpp
test/runtime_test/linspace/: test_linspace  test_linspace.cpp
test/runtime_test/minmax/: test_minmax.cpp
test/runtime_test/zipper/: basic_test.cpp  move_semantics_test.cpp  nested.cpp
test/static_test/linspace/: linspace_static.cpp
test/static_test/minmax/: minmax_static.cpp
test/static_test/zipper/: zipper_static.cpp
test/test_linspace/: test_linspace.cpp
test/test_zipper/: basic  basic_test.cpp  move_semantics_test.cpp  test_minmax.cpp
